Modify Dockerfile