@@ -1,9 +1,14 @@
-FROM  openjdk:alpine
+FROM gradle:4.7.0-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
 
-WORKDIR /app
+FROM openjdk:8-jre-slim
 
-COPY ./build/libs/springdemo-0.0.1-SNAPSHOT.jar /app/app.jar
+EXPOSE 8080
 
-EXPOSE 8081
+RUN mkdir /app
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
